<resources>
    <string name="app_name">Alarm App</string>
    <string name="main_viewalarms">View Alarms</string>
    <string name="main_setalarm">Set New Alarm</string>
    <string name="main_nextalarmtitle">Next alarm will ring at:</string>
    <string name="setalarm_timeseperator">:</string>
    <string name="monday_label">M</string>
    <string name="tuesday_label">T</string>
    <string name="wednesday_label">W</string>
    <string name="thursday_label">T</string>
    <string name="friday_label">F</string>
    <string name="saturday_label">S</string>
    <string name="sunday_label">S</string>
    <string name="setalarm_setbutton">Set Alarm</string>
    <string name="setalarm_updatebutton">Update Alarm</string>
    <string name="snooze_state">snoozeState</string>
    <string name="main_cancelsnooze">Cancel Snooze</string>
    <string name="snooze_time">snoozeTime</string>
    <string name="delete_alarm_desc">Delete alarm</string>
    <string name="weather_desc">Icon for today\'s weather</string>
    <string name="stop_alarm">Stop</string>
    <string name="snooze_alarm">Snooze</string>
    <string name="alarm_stopped_message">Alarm stopped, have a nice day!</string>
    <string name="alarm_snoozed_until_message">Alarm snoozed until:</string>
    <string name="no_alarms_set">No alarms set</string>
    <string name="unable_to_download_weather">Unable to download weather data</string>
</resources>
