<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/alarmrow_margin"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:id="@+id/layout_alarmrow_timedays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_alarmrow_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="07:30"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_alarmrow_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daylabel_margin"
                android:layout_marginStart="@dimen/daylabel_margin"
                android:text="@string/monday_label" />

            <TextView
                android:id="@+id/text_alarmrow_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daylabel_margin"
                android:layout_marginStart="@dimen/daylabel_margin"
                android:text="@string/tuesday_label" />

            <TextView
                android:id="@+id/text_alarmrow_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daylabel_margin"
                android:layout_marginStart="@dimen/daylabel_margin"
                android:text="@string/wednesday_label" />

            <TextView
                android:id="@+id/text_alarmrow_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daylabel_margin"
                android:layout_marginStart="@dimen/daylabel_margin"
                android:text="@string/thursday_label" />

            <TextView
                android:id="@+id/text_alarmrow_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daylabel_margin"
                android:layout_marginStart="@dimen/daylabel_margin"
                android:text="@string/friday_label" />

            <TextView
                android:id="@+id/text_alarmrow_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daylabel_margin"
                android:layout_marginStart="@dimen/daylabel_margin"
                android:text="@string/saturday_label" />

            <TextView
                android:id="@+id/text_alarmrow_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daylabel_margin"
                android:layout_marginStart="@dimen/daylabel_margin"
                android:text="@string/sunday_label" />

        </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/switch_alarmrow_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/button_alarmrow_delete"/>

    <Button
        android:id="@+id/button_alarmrow_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="Delete" />
</RelativeLayout>