<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="red.padraig.alarmapp.ui.activities.SetAlarmActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/picker_setalarm_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/setalarm_timeseperator"
            android:textSize="25sp" />

        <NumberPicker
            android:id="@+id/picker_setalarm_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/day_selector_margin"
            android:layout_marginStart="@dimen/day_selector_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_setalarm_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/monday_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/day_selector_margin"
            android:layout_marginStart="@dimen/day_selector_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_setalarm_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tuesday_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/day_selector_margin"
            android:layout_marginStart="@dimen/day_selector_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_setalarm_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wednesday_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/day_selector_margin"
            android:layout_marginStart="@dimen/day_selector_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_setalarm_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thursday_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/day_selector_margin"
            android:layout_marginStart="@dimen/day_selector_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_setalarm_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/friday_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/day_selector_margin"
            android:layout_marginStart="@dimen/day_selector_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_setalarm_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saturday_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/day_selector_margin"
            android:layout_marginStart="@dimen/day_selector_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_setalarm_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sunday_label" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_setalarm_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_add_alarm_white"
        android:text="@string/setalarm_setbutton" />
</LinearLayout>
