<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="red.padraig.alarmapp.ui.activities.MainActivity">

    <TextView
        android:id="@+id/text_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_nextalarmtitle"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_main_nextalarmtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_main_title"
        android:textSize="40sp"
        android:text="07:20"/>

    <TextView
        android:id="@+id/text_main_nextalarmdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_main_nextalarmtime"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="Monday, 6th November 2017"/>

    <Button
        android:id="@+id/button_main_viewalarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_main_nextalarmdate"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_list"
        android:drawablePadding="@dimen/button_image_padding"
        android:text="@string/main_viewalarms"
        android:textSize="@dimen/button_label"/>

    <Button
        android:id="@+id/button_main_setalarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_main_viewalarms"
        android:drawableStart="@drawable/ic_add_alarm"
        android:drawablePadding="@dimen/button_image_padding"
        android:layout_centerInParent="true"
        android:text="@string/main_setalarm"
        android:textSize="@dimen/button_label"/>

    <Button
        android:id="@+id/button_main_cancelsnooze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_main_setalarm"
        android:layout_centerInParent="true"
        android:drawableStart="@drawable/ic_cancel_snooze"
        android:drawablePadding="@dimen/button_image_padding"
        android:text="@string/main_cancelsnooze"
        android:textSize="@dimen/button_label"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_main_testalarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:drawableStart="@drawable/ic_settings"
        android:drawablePadding="@dimen/button_image_padding"
        android:text="Debug: Trigger Alarm"/>

</RelativeLayout>
